[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "wardn-hub-api"
version = "0.2.97"
description = "Wardn Hub backend API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "greenlet>=3.1.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "prometheus-client>=0.22.0",
  "pwdlib[argon2]>=0.2.1",
  "python-json-logger>=2.0.7",
  "redis>=5.2.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "uvicorn[standard]>=0.32.0",
  "joserfc>=1.7.2",
  "httpx>=0.28.1",
  "opentelemetry-api>=1.30.0",
  "opentelemetry-exporter-otlp-proto-http>=1.30.0",
  "opentelemetry-instrumentation-fastapi>=0.51b0",
  "opentelemetry-instrumentation-httpx>=0.51b0",
  "opentelemetry-instrumentation-logging>=0.51b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.51b0",
  "opentelemetry-sdk>=1.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
